<resources>

    <string name="app_name">Contatos_Activities_Gabarito</string>
    
    <!-- ActionBar -->
    <string name="menu_item_salvar">Salvar</string>
    <string name="menu_item_excluir">Excluir</string>
    <string name="menu_item_cancelar">Cancelar</string>
    <string name="titulo_actionbar_list">Contatos</string>

    <!-- List e Inputs xml-->
    <string name="tela1_meuscontatos">Meus de Contatos</string>
    <string name="tela1_foto">Foto do contato</string>
    <string name="tela1_nome">Nome: </string>
    <string name="tela1_hint_nome">  insira aqui o nome</string>
    <string name="tela1_sobrenome">Sobrenome: </string>
    <string name="tela1_hint_sobrenome">  insira aqui o sobrenome</string>
    <string name="tela1_telefone">Telefone: </string>
    <string name="tela1_hint_telefone">  insira aqui o telefone</string>

</resources>
