<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tela1_nome"
            android:id="@+id/textView_nome" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText_nome"
            android:hint="@string/tela1_hint_nome" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tela1_sobrenome"
            android:id="@+id/textView_sobrenome" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText_sobrenome"
            android:hint="@string/tela1_hint_sobrenome" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tela1_telefone"
            android:id="@+id/textView_telefone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editText_telefone"
            android:hint="@string/tela1_hint_telefone" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:id="@+id/imageView"
            android:src="@drawable/foto_sombra"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:onClick="carregarImagem" />
    </LinearLayout>

</LinearLayout>